--- a/dftb/pubspec.yaml
+++ b/dftb/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  shadcn_flutter:
+    git:
+      url: https://github.com/sunarya-thito/shadcn_flutter
+      ref: master
 
 dev_dependencies:
   flutter_test:
