--- a/dftb/pubspec.yaml
+++ b/dftb/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.2.3
+  shadcn_flutter:
+    git:
+      url: https://github.com/sunarya-thito/shadcn_flutter
+      ref: master
 
 dev_dependencies:
   flutter_test:
