--- a/dftb/pubspec.yaml
+++ b/dftb/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_riverpod: ^2.6.1
   shared_preferences: ^2.2.3
   shadcn_flutter:
     git:
