--- a/dftb/pubspec.yaml
+++ b/dftb/pubspec.yaml
@@ -34,12 +34,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_local_notifications: ^17.1.2
   flutter_riverpod: ^2.6.1
+  flutter_timezone: ^1.0.8
+  path: ^1.9.0
+  sqflite: ^2.4.0
   shared_preferences: ^2.2.3
   shadcn_flutter:
     git:
       url: https://github.com/sunarya-thito/shadcn_flutter
       ref: master
+  timezone: ^0.9.4
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
