--- a/dftb/pubspec.yaml
+++ b/dftb/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_local_notifications: ^20.0.0
   flutter_riverpod: ^3.2.0
   flutter_timezone: ^5.0.1
+  flutter_soloud: ^3.4.7
+  audio_session: ^0.2.2
+  path_provider: ^2.1.3
   path: ^1.9.0
   sqflite: ^2.4.0
   shared_preferences: ^2.2.3
@@ -71,7 +74,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/sounds/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
