Add tag-based NFC registration and verification flow

--- a/dftb/ios/Runner/Info.plist
+++ b/dftb/ios/Runner/Info.plist
@@ -45,5 +45,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NFCReaderUsageDescription</key>
+	<string>Scan your bathroom tag to verify brushing.</string>
 </dict>
 </plist>
